queues fix