@@ -1,6 +1,8 @@
 package RabbitMQ;
 
 import NettyHTTP.NettyHTTPServer;
+import com.mongodb.client.MongoClient;
+import com.mongodb.client.MongoClients;
 import com.rabbitmq.client.*;
 import core.CommandDP;
 import core.CommandsMap;
@@ -8,6 +10,7 @@ import core.commands.UserCommands.UserDAL;
 import org.json.JSONObject;
 
 import java.io.IOException;
+import java.io.Serializable;
 import java.lang.reflect.Method;
 import java.util.Arrays;
 import java.util.List;
@@ -22,6 +25,7 @@ import io.github.cdimascio.dotenv.Dotenv;
 public class ConsumerMQ {
     //private final static String QUEUE_NAME = "queue_name";
     private static ExecutorService threadPool = Executors.newFixedThreadPool(10);
+
 
     public static void main(String[] argv) throws Exception {
         Dotenv dotenv = Dotenv.load();
@@ -42,17 +46,21 @@ public class ConsumerMQ {
 
         if(NettyHTTPServer.channel==null)
             NettyHTTPServer.instantiateChannel();
-
+        String connectionString = dotenv.get("CONNECTION_STRING") + "10" ; // no. of DP connections
+        MongoClient mongoClient = null;
+        try  {
+            mongoClient = MongoClients.create(connectionString);
+        }catch(Exception error){
+            System.out.println("error hhhhhhhhhhhhh :"+error);
+        }
         for (String QUEUE_NAME:queueResNames) {
             NettyHTTPServer.channel.queueDeclare(QUEUE_NAME, false, false, false, null);
         }
-
+        MongoClient finalMongoClient = mongoClient;
         for (String QUEUE_NAME:queueReqNames) {
             channel.queueDeclare(QUEUE_NAME, false, false, false, null);
             String responseQueue = QUEUE_NAME.split("Req",0)[0]+"Res";
             System.out.println("[*REQ] "+QUEUE_NAME + " [*] Waiting for messages. To exit press CTRL+C");
-
-
             consumer = new DefaultConsumer(channel) {
                 @Override
                 public void handleDelivery(String consumerTag, Envelope envelope, AMQP.BasicProperties properties, byte[] body)
@@ -63,11 +71,11 @@ public class ConsumerMQ {
                                 String message = new String(body, "UTF-8");
                                 JSONObject requestJson = new JSONObject(message);
                                 String function = requestJson.getString("function");
-                                String serviceDAL = requestJson.getString("service");
-                                CommandDP command = (CommandDP) CommandsMap.queryClass(function).newInstance();
+                                String queue = requestJson.getString("queue");
+                                CommandDP command = (CommandDP) CommandsMap.queryClass(queue + "/" + function).getDeclaredConstructor().newInstance();
                                 Class service = command.getClass();
-                                Method setData = service.getMethod("setData",JSONObject.class, Object.class);
-                                setData.invoke(command, requestJson, dalMap.get("core.commands."+serviceDAL+"Commands."+serviceDAL+"DAL"));
+                                Method setData = service.getMethod("setData",JSONObject.class, MongoClient.class);
+                                setData.invoke(command, requestJson, finalMongoClient);
                                 JSONObject result = command.execute();
                                 AMQP.BasicProperties replyProps = new AMQP.BasicProperties
                                         .Builder()
@@ -77,6 +85,20 @@ public class ConsumerMQ {
                                 channel.basicAck(envelope.getDeliveryTag(), false);
                             } catch (Exception e) {
                                 e.printStackTrace();
+                                AMQP.BasicProperties replyProps = new AMQP.BasicProperties
+                                        .Builder()
+                                        .correlationId(properties.getCorrelationId())
+                                        .build();
+                                JSONObject result = new JSONObject();
+                                result.put("Message","Invalid d7ka");
+                                System.out.println(result.toString());
+                                try {
+                                    channel.basicPublish("", properties.getReplyTo(), replyProps, result.toString().getBytes("UTF-8"));
+                                    channel.basicAck(envelope.getDeliveryTag(), false);
+
+                                } catch (IOException ioException) {
+                                    ioException.printStackTrace();
+                                }
                             }
                         }
                     };
